--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Trilha de CSS - DIO</title>
 </head>
+<link rel="stylesheet" href="./assets/css/style.css">
 <body>
   <header class="banner">
     <div class="banner-content">
